Try reconfiguring CLI